add .cinema-screen html and css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
   <body onload="onInit()">
     <h1>Popcorn Time</h1>
-
+    <div class="cinema-screen">
+      <h2>COMING SOON</h2>
+    </div>
     <table class="cinema">
       <tbody class="cinema-seats"></tbody>
     </table>
